# swatplus

./: .gitignore  .travis.yml  CaseStudyUsaBasin.py  NCsed_leach.f90  NP_flow.F90  README.md  SWATOutput.mdb  actions.f90  albedo.f90  allocate_parms.f90  animal_herd_module.f90  appveyor.yml  aqu2d_read.f90  aqu_1d_control.f90  aqu_elements_read.f90  aqu_hyds.f90  aqu_initial.f90  aqu_read.f90  aqu_read_elements.f90  aquifer_module.f90  aquifer_output.f90  ascrv.f90  atmoparm_read.f90  aunif.f90  bac_apply_hrucon.f90  bac_apply_plant.f90  bac_apply_soil.f90  bac_hrucontrol.f90  bac_ls_process.f90  bac_ls_runoff.f90  bac_ls_swrouting.f90  bac_lsinit_read.f90  bac_lsparms_read.f90  bac_read_lsinit.f90  bac_read_lsparms.f90  bacteria_init.f90  bacteria_module.f90  basin_aquifer_output.f90  basin_cc_read.f90  basin_channel_output.f90  (+543 more)
Texas_large_gully/: channel_sd_day.csv  channel_sd_yr.csv  channel_sdmorph_day.csv  channel_sdmorph_yr.csv  hru-lte.con  hru-lte_ls_day.csv  hru-lte_ls_yr.csv  hru-lte_pw_day.csv  hru-lte_pw_yr.csv  hru-lte_wb_day.csv  hru-lte_wb_yr.csv  initial.cha  ls_unit.def  print.prt
Trial Robit/: Trial Robit.qgs  Trial Robit.sqlite  trial_robit.json
database_files/: bmpuser.str  cal_parms.cal  calibration.cal  chem_app.ops  codes.sft  d_table.dtl  fertilizer.frt  filterstrip.str  fire.ops  flo_con.dtl  grassedww.str  graze.ops  hydrology.hyd  irr.ops  lum.dtl  ovn_table.lum  pesticide.pst  plants.plt  res_rel.dtl  septic.sep  septic.str  soils_lte.sol  sweep.ops  tiledrain.str  topography.hyd  water_balance.sft  water_rights.wro  wb_parms.sft
documentation/: inputs_swatplus.docx  inputs_swatplus_rev56.docx  inputs_swatplus_rev57.docx  inputs_swatplus_rev58.docx  inputs_swatplus_rev59.docx  inputs_swatplus_rev59_2.docx  inputs_swatplus_rev60.docx  inputs_swatplus_rev60_1.docx
example_data_descriptions/: Commit datasets descriptions.docx
modular_database_table/: Modular Database 02-16-2017.xlsx  Modular Database 04-17-2017.xlsx  Modular Database 04-25-2017.xlsx  Modular Database 05-25-2017.xlsx  Modular Database 06-28-2017.xlsx  Modular Database 10-1-2019_.xlsm  Modular Database 11-2-2018.xlsm  Modular Database 12-18-2018.xlsm  Modular Database 4-16-2019.xlsm  (+4 more)
src/: CMakeLists.txt  NCsed_leach.f90  NP_flow.F90  actions.f90  albedo.f90  allocate_parms.f90  animal_herd_module.f90  aqu2d_init.f90  aqu2d_read.f90  aqu_1d_control.f90  aqu_hyds.f90  aqu_initial.f90  aqu_pest_output_init.f90  aqu_pesticide_module.f90  aqu_pesticide_output.f90  aqu_read.f90  aqu_read_elements.f90  aqu_read_init.f90  aquifer_module.f90  aquifer_output.f90  ascrv.f90  atri.f90  aunif.f90  basin_aqu_pest_output.f90  basin_aquifer_output.f90  basin_ch_pest_output.f90  basin_chanmorph_output.f90  basin_channel_output.f90  basin_ls_pest_output.f90  basin_module.f90  basin_output.f90  basin_print_codes_read.f90  basin_prm_default.f90  basin_read_cc.f90  basin_read_objs.f90  basin_read_prm.f90  basin_recall_output.f90  basin_res_pest_output.f90  basin_reservoir_output.f90  basin_sdchannel_output.f90  (+494 more)
test/: hello.f90  (+3 more)
(+958 files in other folders)
