[tool.poetry]
name = "swatplus_test"
version = "0.2.0"
description = ""
authors = ["joelz575 <joel.harms@mail.mcgill.ca>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
pytest = "^6.2.4"
tinamit-idm = "^0.2.4"

[tool.poetry.dev-dependencies]
pytest = "^6.1.1"
pytest-subtests = "^0.3.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
